--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,7 @@ aside {
     position: relative;
     padding-top: 4px;
     margin-bottom: 40px;
+    border-bottom: 1px rgb(135, 135, 135) solid;
 }
 
 .post-date {
@@ -180,6 +181,14 @@ aside {
     font-weight: normal;
 }
 
+.post-title a {
+    color: #000;
+}
+
+.post-title a:hover {
+    color: #0bd;
+}
+
 .post-title,
 
 .post-cat {
@@ -195,6 +204,15 @@ aside {
 
 .aside p {
     padding: 12px 10px;
+}
+
+.news-subtitle {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.news-break {
+    border-bottom: 1px #ddd solid;
 }
 
 .sub-menu {
@@ -222,7 +240,7 @@ aside {
     .page-title {
         font-size: 2.5rem;
     }
-    
+
     .page-header {
         flex-direction: column;
         align-items: center;
@@ -279,6 +297,10 @@ aside {
 
     .post-title {
         font-size: 1.375rem;
+    }
+
+    .post-title a {
+        color: black;
     }
 
     .post-cat {
